--- a/project7-master/index.html
+++ b/project7-master/index.html
@@ -573,9 +573,10 @@
 
 <!-- map area -->
 	<div class="container mb-4 map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d387191.33750346623!2d-73.979681!3d40.6974881!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew+York%2C+NY%2C+USA!5e0!3m2!1sen!2sin!4v1541477355474" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d895574.3030318945!2d76.683508!3d28.73935!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d047309fff32f%3A0xfc5606ed1b5d46c3!2sDelhi!5e0!3m2!1sen!2sin!4v1549863477993" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen=""></iframe>
 	</div>
-	<!-- map ends -->
+  <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d895574.3030318945!2d76.683508!3d28.73935!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d047309fff32f%3A0xfc5606ed1b5d46c3!2sDelhi!5e0!3m2!1sen!2sin!4v1549863477993" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+	 map ends -->
 </section>
 <!-- contact Us ends -->
 
@@ -689,6 +690,8 @@ var runonce = false;
   runonce = true;
         
  });
+
+  $("body").niceScroll();
     	
 </script>
 </body>
