--- a/project7-master/index.html
+++ b/project7-master/index.html
@@ -214,7 +214,7 @@
    			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla. malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
    		</div>
    		<div class="row">
-   			<div class="col-lg-4">
+   			<div class="col-lg-4 col-sm-6">
    				<div class="box fadeInLeft">
    					<div class="icon">
    						<i class="fa fa-bar-chart fa-gradient"></i>
@@ -224,7 +224,7 @@
    				</div>
    			</div>
 
-   			<div class="col-lg-4">
+   			<div class="col-lg-4 col-sm-6">
    				<div class="box fadeInLeft">
    					<div class="icon">
    						<i class="fa fa-picture-o"></i>
@@ -234,7 +234,7 @@
    				</div>
    			</div>
 
-   			<div class="col-lg-4">
+   			<div class="col-lg-4 col-sm-6">
    				<div class="box fadeInLeft">
    					<div class="icon">
    						<i class="fa fa-shopping-bag"></i>
@@ -244,7 +244,7 @@
    				</div>
    			</div>
 
-   			<div class="col-lg-4">
+   			<div class="col-lg-4 col-sm-6">
    				<div class="box fadeInLeft">
    					<div class="icon">
    						<i class="fa fa-map"></i>
@@ -253,7 +253,7 @@
    					<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
    				</div>
    			</div>
-   			<div class="col-lg-4">
+   			<div class="col-lg-4 col-sm-6">
    				<div class="box fadeInLeft">
    					<div class="icon">
    						<i class="fa fa-shopping-bag"></i>
@@ -262,7 +262,7 @@
    					<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt fugiat culpa esse aute nulla.</p>
    				</div>
    			</div>
-   			<div class="col-lg-4">
+   			<div class="col-lg-4 col-sm-6">
    				<div class="box fadeInLeft">
    					<div class="icon">
    						<i class="fa fa-map"></i>
@@ -327,7 +327,7 @@
     <div>
       <img src="https://webthemez.com/demo/topper-corporate-bootstrap-4-website-template/img/clients/client-5.png">
     </div>
-    <div style="width: 60%">
+    <div>
       <img src="https://webthemez.com/demo/topper-corporate-bootstrap-4-website-template/img/clients/client-1.png">
     </div>
     <div style="width: 60%">
@@ -460,6 +460,8 @@
 				</a>
 			</div>
 		</div>
+
+
 
     </div>
 </div>
@@ -722,8 +724,10 @@
   ]
 });
 
+
  $(window).scroll(function(){
     		if($(this).scrollTop()>600) {
+
     		$('.back-to-top').css({"display":"block"})
     	}  else{
     		$('.back-to-top').css({"display":"none"})
